--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "./cli/csscomb --htmlext vue ./test"
+    "lint": "./bin/csscomb --htmlext vue ./test"
   },
   "author": "",
   "license": "ISC",
